--- a/README
+++ b/README
@@ -3,5 +3,4 @@ DoubanMovie To WWW.AN80.COM
 
 在浏览豆瓣电影的时候显示`没有水的鱼`是否有该电影的下载情况
 
-
-Chrome安装地址: [https://github.com/downloads/coolzilj/DoubanMovie2An80/DoubanMovie2An80.crx](https://github.com/downloads/coolzilj/DoubanMovie2An80/DoubanMovie2An80.crx)
+Chrome安装地址: https://github.com/downloads/coolzilj/DoubanMovie2An80/DoubanMovie2An80.crx
